--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.4",
+    "eslint": "^8",
+    "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
-    "typescript": "^5",
-    "eslint": "^8",
-    "eslint-config-next": "15.1.3"
+    "typescript": "^5"
   }
 }
