--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.1.7",
-    "axios": "^1.7.9",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
     "framer-motion": "^12.23.6",
+    "inngest": "^3.40.1",
     "lucide-react": "^0.474.0",
     "next": "^15.4.1",
     "next-themes": "^0.4.6",
