--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.1",
     "framer-motion": "^12.23.6",
+    "imagekit": "^6.0.0",
     "inngest": "^3.40.1",
     "lucide-react": "^0.474.0",
     "next": "^15.4.1",
